samples/_failures_safe/1761219320_2004c7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2e782f0c.c: In function ‘main’:
./samples/SAFE/__tmp_2e782f0c.c:161:5: error: expected declaration or statement at end of input
  161 |     sm.buffer_pos = 0;
      |     ^~
